--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -1,4 +1,4 @@
-%nav.navbar{"aria-label" => "main navigation", :role => "navigation"}
+%nav#main-nav.navbar{"aria-label" => "main navigation", :role => "navigation"}
   .navbar-brand
     %a.navbar-item{:href => "/"}
       Spotify Time Machine
