--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,11 +16,15 @@
  */
 
 body {
-  background: #2d2d2d;
+  background: #313131;
   color: white !important;
   min-height: 100vh;
 }
 
 .table td, .table th {
   vertical-align: middle !important;
+}
+
+.no-padding {
+  padding: 0 !important;
 }
