View playlist versions instead of playlists directly

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -1,3 +1,8 @@
 nav#main-nav.navbar {
   background: #3aff9b;
+
+  #time-machine {
+    font-family: 'Bungee', cursive;
+    // margin-left: 3px;
+  }
 }
