--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,6 +6,8 @@
     = csrf_meta_tags
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
+    %link{:href => "https://use.fontawesome.com/releases/v5.0.8/css/all.css", :rel => "stylesheet"}/
+    %link{:href => "https://fonts.googleapis.com/css?family=Bungee", :rel => "stylesheet"}/
   %body
     = render 'layouts/navbar'
     = render 'layouts/breadcrumb'
