--- a/app/views/playlists/index.html.haml
+++ b/app/views/playlists/index.html.haml
@@ -1,6 +1,8 @@
-%table.table.is-fullwidth
-  - @playlists.each do |playlist|
-    %tr
-      %td
-        = link_to playlist.name, playlist_path(playlist)
-      %td some
+.container
+  %table.table.is-fullwidth
+    - @playlists.each do |playlist|
+      = link_to playlist_path(playlist) do
+        %section.hero{ class: "is-#{hero_color}"}
+          .hero-body
+            .container
+              %h1.title= playlist.name
