--- a/app/assets/stylesheets/breadcrumb.scss
+++ b/app/assets/stylesheets/breadcrumb.scss
@@ -3,6 +3,7 @@ nav.breadcrumb {
   background: #f1f1f1;
   background-color: #292929;
   margin-bottom: 0.7rem;
+  font-size: 0.9rem;
 }
 
 nav.breadcrumb {
