Changes to playlist creation and styling
Playlist versions now only get created when there are updates to that playlist
Using SCSS variables for neon green color used in multiple files
Make generic make_request method to take care of token regen
Start controller method for making new playlist
Adds description and follower count to playlist versions

--- a/app/assets/stylesheets/breadcrumb.scss
+++ b/app/assets/stylesheets/breadcrumb.scss
@@ -1,3 +1,5 @@
+@import "utilities/variables";
+
 nav.breadcrumb {
   padding: 0px 18px;
   background: #f1f1f1;
@@ -8,7 +10,7 @@ nav.breadcrumb {
 
 nav.breadcrumb {
   a {
-    color: #3aff9b;
+    color: $neon-green;
   }
 
   a:hover {
