--- a/app/views/playlist_versions/show.html.haml
+++ b/app/views/playlist_versions/show.html.haml
@@ -10,8 +10,13 @@
           .box#playlist-info-box
             %h1= @playlist.name
             %h1
+              = @playlist.versions.last.description
+            %h1
               Song Count:
               = @playlist.versions.last.songs.count
+            %h1
+              Followers:
+              = @playlist.versions.last.followers
         .column.is-full-desktop#playlist-version-column
           %nav.panel
             %p.panel-heading
