Dynamic button text on save playist

--- a/app/assets/stylesheets/playlist.scss
+++ b/app/assets/stylesheets/playlist.scss
@@ -26,12 +26,16 @@
   }
 
   a:link, a:visited {
+    &:not(#save-playlist-btn) {
       color: white;
+    }
   }
 
   a:hover {
-    color: #000000;
-    background: $neon-green;
+    &:not(#save-playlist-btn) {
+      color: #000000;
+      background: $neon-green;
+    }
   }
 
   .box {
