--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -5,6 +5,7 @@ nav#main-nav.navbar {
 
   #time-machine {
     font-family: 'Bungee', cursive;
+    text-shadow: -1px -1px 0px #3aff9b, -2px -2px 0px #ffffff, -3px -3px 0px #3aff9b00;
     // margin-left: 3px;
   }
 
