--- a/app/views/playlists/new.html.haml
+++ b/app/views/playlists/new.html.haml
@@ -1,11 +1,20 @@
-.box
-  = simple_form_for @playlist do |f|
-    .field
-      .control
-        = f.input :name,wrapper_html: { class: 'your-class' }
-    .field
-      .control
-        = f.input :spotify_id, wrapper_html: { class: 'your-class' }
-    .field
-      .control
-        = f.button :submit
+.container
+  .box
+    %h2.has-text-centered.is-size-3
+      New Playlist
+    = form_with model: @playlist do |f|
+      .field
+        .control
+          = f.label :name, class: 'label'
+          = f.text_field :name, class: 'input'
+      .field
+        .control
+          = f.label :spotify_id, class: 'label'
+          = f.text_field :spotify_id, class: 'input'
+      .field
+        .control
+          = f.label :spotify_full_uri, class: 'label'
+          = f.text_field :spotify_full_uri, class: 'input'
+      .field
+        .control
+          = f.button :submit
