--- a/app/assets/stylesheets/playlist_version.scss
+++ b/app/assets/stylesheets/playlist_version.scss
@@ -7,3 +7,100 @@
     background-color: inherit !important;
   }
 }
+
+.song-artwork-td {
+  position: relative;
+
+  a:link, a:hover, a:visited {
+    color: white;
+  }
+
+  &:hover {
+    .song-list-artwork {
+      opacity: 0.2;
+    }
+
+    .play-overlay {
+      opacity: 1;
+    }
+  }
+
+  .play-overlay {
+    font-size: 1.2rem;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -webkit-text-stroke: 1px black;
+    -moz-text-stroke: 1px black;
+  }
+}
+
+
+#playlist-show {
+  .hero-body {
+    padding: 0 !important;
+  }
+
+  table#songs-table {
+    background: #ffffff00;
+    color: #dcdcdc;
+    font-size: 0.9rem;
+
+    td, th {
+      border-bottom: 1px solid #333333;
+    }
+
+    .song-list-artwork {
+      height: auto;
+      width: 46px;
+      margin-bottom: -5px;
+    }
+
+    tbody tr:not(.is-selected):hover {
+      background-color: #232323;
+    }
+  }
+
+  a:link, a:visited {
+    &:not(.no-highlight) {
+      color: white;
+    }
+  }
+
+  a:hover {
+    &:not(.no-highlight) {
+      color: #000000;
+      background: $neon-green;
+    }
+  }
+
+  .box {
+    background: #272727;
+    color: #dcdcdc;
+  }
+
+  #playlist-info-box {
+    height: 100%;
+  }
+
+  .panel-heading {
+    font-size: 1.05em;
+    text-align: center;
+    background-color: $neon-green;
+    line-height: 1.15;
+  }
+
+  #playlist-version-column {
+    .panel-heading, .panel-tabs, .panel-block {
+      border-bottom: 1px solid $neon-green;
+      border-left: 1px solid $neon-green;
+      border-right: 1px solid $neon-green;
+    }
+    .panel-heading:first-child, .panel-tabs:first-child, .panel-block:first-child {
+      border-top: 1px solid $neon-green;
+    }
+  }
+}
