--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -14,6 +14,6 @@ nav#main-nav.navbar {
   a.navbar-link:hover,
   a.navbar-link.is-active {
     background: none;
-    color: black;
+    color: black !important;
   }
 }
