All of the refactoring

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -16,4 +16,8 @@ nav#main-nav.navbar {
     background: none;
     color: black !important;
   }
+
+  a:link, a:hover, a:visited {
+    color: black;
+  }
 }
