--- a/app/views/playlists/index.html.haml
+++ b/app/views/playlists/index.html.haml
@@ -1,8 +1,33 @@
-.container
-  %table.table.is-fullwidth
-    - @playlists.each do |playlist|
-      = link_to playlist_path(playlist) do
-        %section.hero{ class: "is-#{hero_color}"}
-          .hero-body
-            .container
-              %h1.title= playlist.name
+#homepage
+  %h1.homepage-title.title Spotify Time Machine
+  %h3.homepage-subtitle.subtitle View your favorite playlists from long ago
+
+  .columns.homepage-row.is-mobile
+    .column.is-one-fifth
+      .homepage-row-title
+        Trending
+    .column
+      Playlists go here
+
+  .columns.homepage-row.is-mobile
+    .column.is-one-fifth
+      .homepage-row-title
+        Recently Updated
+    .column
+      Playlists go here
+
+  .columns.homepage-row.is-mobile
+    .column.is-one-fifth
+      .homepage-row-title
+        Featured
+    .column
+      Playlists go here
+
+-# .container
+-#   %table.table.is-fullwidth
+-#     - @playlists.each do |playlist|
+-#       = link_to playlist_path(playlist) do
+-#         %section.hero{ class: "is-#{hero_color}"}
+-#           .hero-body
+-#             .container
+-#               %h1.title= playlist.name
