--- a/app/views/playlist_versions/show.html.haml
+++ b/app/views/playlist_versions/show.html.haml
@@ -38,7 +38,7 @@
         %table#songs-table.table.is-fullwidth
           - @songs.each_with_index do |song, position|
             %tr
-              %td.song-position= position
+              %td.song-position= position + 1
               %td.song-artwork-td
                 = link_to "https://open.spotify.com/track/#{song.spotify_id}", class: 'no-highlight', target: "_blank" do
                   %img.song-list-artwork{ src: song.artwork_url }
